3 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<hello name="{{ name }}"></hello>
-<app-header> </app-header>
-<p>Start editing to see some magic happen yes :)</p>
+<div class=".container">
+  <app-header> </app-header>
+  <p>Start editing to see some magic happen yes :)</p>
+</div>
