--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,3 @@
-<button [ngStyle]="{ 'background-color': color }">{{ text }}</button>
+<button [ngStyle]="{ 'background-color': color }" (click)="onClick()">
+  {{ text }}
+</button>
