--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,5 @@
 <header>
   <h1>header works ye!</h1>
-  <app-button color="green" text="Add"> </app-button>
+  <app-button color="green" text="Add" (btnClick)="toggleAddTask()">
+  </app-button>
 </header>
